--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -1,3 +1,35 @@
+* {
+  box-sizing: border-box;
+  margin: auto;
+  font-family: $font-open;
+}
+
 body {
-  font-family: $font;
+  margin: 0;
+  text-align: center;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.logo {
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 57px;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 42px;
+  line-height: 43px;
+  width: 497px;
+  background-color: #FF2D2D;
+  color: #FFF;
+  padding: 30px 0;
+  border-radius: 6px;
+  text-decoration: none;
 }
