--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,5 +1,5 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$font-open: 'Open Sans', sans-serif;
 
 $h1-fz-mobile: 20px;
 $h1-fz-tablet: 32px;
@@ -8,6 +8,12 @@ $h1-fw: 400;
 
 // colors
 
+$dark: #333;
+
+$red: #FF2D2D;
+
 // indents
+
+$gap: 20px;
 
 // breakpoints
