--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -4,6 +4,10 @@
   font-family: $font-open;
 }
 
+main {
+  padding-top: 90px;
+}
+
 body {
   margin: 0;
   text-align: center;
@@ -32,4 +36,9 @@ img {
   padding: 30px 0;
   border-radius: 6px;
   text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
