--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -26,19 +26,18 @@ img {
   text-decoration: none;
 }
 
-.btn {
-  display: inline-block;
-  font-size: 42px;
-  line-height: 43px;
-  width: 497px;
-  background-color: #FF2D2D;
-  color: #FFF;
-  padding: 30px 0;
-  border-radius: 6px;
-  text-decoration: none;
-}
-
 img {
   display: block;
   max-width: 100%;
+}
+
+.order-form-field {
+  background: #FFFFFF;
+  padding: 35px 0 35px 30px;
+  width: 382px;
+  font-size: 28px;
+  line-height: 34px;
+  color: #333333;
+  border-radius: 6px;
+  border: 0;
 }
