Corrected inner width and changed place of order-form-field

--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -22,3 +22,14 @@ form {
   display: flex;
   justify-content: space-between;
 }
+
+.order-form-field {
+  background: #FFFFFF;
+  padding: 35px 0 35px 30px;
+  width: 412px;
+  font-size: 28px;
+  line-height: 34px;
+  color: #333333;
+  border-radius: 6px;
+  border: 0;
+}
