--- a/src/styles/common/_btn.scss
+++ b/src/styles/common/_btn.scss
@@ -2,18 +2,20 @@
   display: inline-block;
   font-size: 42px;
   line-height: 43px;
-  width: 497px;
+  width: 33%;
   background-color: #FF2D2D;
   color: #FFF;
   padding: 30px 0;
   border-radius: 6px;
   text-decoration: none;
+  text-align: center;
 }
 
 .btn-transparent {
   width: 412px;
-  padding: 36px 0 34px;
+  padding: 34px 0 36px;
   font-size: 28px;
   line-height: 34px;
   border: 0;
+  margin-top: 35px;
 }
