--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -17,3 +17,10 @@ $red: #FF2D2D;
 $gap: 20px;
 
 // breakpoints
+
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px;
+
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
