--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,6 +1,14 @@
 .footer {
   background-color: #333333;
   padding: 31px 0;
+
+  @media (max-width:$tablet-max) {
+    padding: 35px 0;
+  }
+
+  @media (max-width:$mobile-max) {
+    padding: 30px 0 35px;
+  }
 }
 
 .footer-inner{
@@ -10,10 +18,23 @@
 .footer-flex {
   display: flex;
   align-items: center;
+
+  @media (max-width:$mobile-max) {
+    display: block;
+    text-align: center;
+  }
 }
 
 .footer-logo {
   margin-right: auto;
+
+  .logo {
+    @media (max-width:$mobile-max) {
+      font-size: 36px;
+      line-height: 49px;
+      margin-right: 0;
+    }
+  }
 }
 
 .hot-line{
@@ -22,14 +43,29 @@
   line-height: 38px;
   margin-right: 45px;
   color: #FFFFFF;
+
+  @media (max-width:$mobile-max) {
+    display: block;
+    margin: 30px 0 15px;
+  }
 }
 
 .social{
   display: flex;
+
+  @media (max-width:$mobile-max) {
+    justify-content: center;
+  }
 }
 
 .social-item {
   margin-left: 15px;
+}
+
+.social-item:first-child {
+  @media (max-width:$mobile-max) {
+    margin-left: 0;
+  }
 }
 
 .social-logo {
