--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,10 +1,37 @@
+form {
+  display: flex;
+  justify-content: space-between;
+
+  @media (max-width: $tablet-max){
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
 .form-field {
   flex-basis: 33.33%;
   margin-right: 20px;
+
+  @media (max-width: $tablet-max){
+    flex-basis: calc(50% - 10px);
+  }
+
+  @media (max-width: $mobile-max) {
+    flex-basis: 100%;
+    margin-right: 0;
+  }
+}
+
+.form-field:nth-child(2n) {
+  margin: 0;
 }
 
 .form-field:last-child {
   margin-right: 0;
+
+  @media (max-width: $tablet-max){
+    flex-basis: 100%;
+  }
 }
 
 .form-input {
