--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -1,6 +1,14 @@
 .order {
   background-color: rgba(51, 51, 51, .1);
   padding: 130px 0;
+
+  @media (max-width: $tablet-max) {
+    padding: 120px 0;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 90px 0;
+  }
 }
 
 .order-inner {
@@ -18,20 +26,9 @@
   color: #333333;
   margin: 37px 0 90px;
   text-align: center;
-}
 
-form {
-  display: flex;
-  justify-content: space-between;
-}
-
-.order-form-field {
-  background: #FFFFFF;
-  padding: 35px 0 35px 30px;
-  width: 412px;
-  font-size: 28px;
-  line-height: 34px;
-  color: #333333;
-  border-radius: 6px;
-  border: 0;
+  @media (max-width: $mobile-max) {
+    font-size: 18px;
+    line-height: 25px;
+  }
 }
