--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -23,4 +23,14 @@ img {
   line-height: 57px;
   color: #FFF;
   text-decoration: none;
+
+  @media (max-width:$tablet-max) {
+    font-size: 36px;
+    line-height: 49px;
+  }
+
+  @media (max-width:$tablet-max) {
+    font-size: 28px;
+    line-height: 38px;
+  }
 }
