--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -1,10 +1,28 @@
 @mixin inner {
-  width: 1276px;
+  max-width: 1276px;
   margin: 0 auto;
+
+  @media (max-width: $tablet-max) {
+    padding: 0 10px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 0 16px;
+  }
 }
 
 @mixin title {
   font-size: 64px;
   line-height: 87px;
   color: #333;
+
+  @media (max-width: $tablet-max) {
+    font-size: 54px;
+    line-height: 74px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 32px;
+    line-height: 44px;
+  }
 }
